bind real service to retry page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,9 @@
             (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
-        {{'app.title' | translate}}
+        <img src="../assets/images/proteccion-logo.png"
+            alt="some_text"
+            style="width:width;height:height;">
         <span class="example-spacer"></span>
         <button md-icon-button
             [mdMenuTriggerFor]="menu">
