--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~@angular/material/theming';
 @include mat-core();
+
+$black-87-opacity: rgba(black, 0.87);
+
 $candy-app-primary: mat-palette($mat-indigo);
+// Define the default theme (same as the example above).
+$candy-app-primary: mat-palette($mat-amber);
+$candy-app-accent: mat-palette($mat-pink, A200, A100, A400);
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
+// Include the default theme styles.
+@include angular-material-theme($candy-app-theme);
+// Define an alternate dark theme.
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent: mat-palette($mat-amber, A200, A100, A400);
+$dark-warn: mat-palette($mat-deep-orange);
+$dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
 md-icon.delete:hover {
     color: red;
 }
@@ -19,3 +33,6 @@ md-icon.refresh:hover {
 md-icon.retry:hover {
     color: blue;
 }
+
+
+
