--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,11 @@
 
 @import '~@angular/material/theming';
 @include mat-core();
-
-$black-87-opacity: rgba(black, 0.87);
-
-$candy-app-primary: mat-palette($mat-indigo);
+$pr-primary: ( 50: #E3E829, 100: #dde6f3, 200: #b4c9e4, 300: #7fa3d1, 400: #6992c9, 500: #5282c1, 600: #4072b4, 700: #38649d, 800: #305687, 900: #284770, A100: #E3E829, A200: #dde6f3, A400: #6992c9, A700: #38649d, contrast: ( 50: $black-87-opacity, 100: $black-87-opacity, 200: $black-87-opacity, 300: $black-87-opacity, 400: $black-87-opacity, 500: white, 600: white, 700: white, 800: white, 900: white, A100: $black-87-opacity, A200: $black-87-opacity, A400: $black-87-opacity, A700: white, ));
+$pr-accent: ( 50: #063598, 100: #dde6f3, 200: #b4c9e4, 300: #7fa3d1, 400: #6992c9, 500: #5282c1, 600: #4072b4, 700: #38649d, 800: #305687, 900: #284770, A100: #063598, A200: #dde6f3, A400: #6992c9, A700: #38649d, contrast: ( 50: $black-87-opacity, 100: $black-87-opacity, 200: $black-87-opacity, 300: $black-87-opacity, 400: $black-87-opacity, 500: white, 600: white, 700: white, 800: white, 900: white, A100: $black-87-opacity, A200: $black-87-opacity, A400: $black-87-opacity, A700: white, ));
 // Define the default theme (same as the example above).
-$candy-app-primary: mat-palette($mat-amber);
-$candy-app-accent: mat-palette($mat-pink, A200, A100, A400);
+$candy-app-primary: mat-palette($pr-primary, A100);
+$candy-app-accent: mat-palette($pr-accent, A100);
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 // Include the default theme styles.
 @include angular-material-theme($candy-app-theme);
@@ -17,7 +15,6 @@ $dark-primary: mat-palette($mat-blue-grey);
 $dark-accent: mat-palette($mat-amber, A200, A100, A400);
 $dark-warn: mat-palette($mat-deep-orange);
 $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
-
 md-icon.delete:hover {
     color: red;
 }
@@ -34,5 +31,21 @@ md-icon.retry:hover {
     color: blue;
 }
 
+md-icon.proteccion {
+    border: 2px solid #063598;
+    border-radius: 50%;
+}
 
+md-icon.proteccion:hover {
+    color: #E3E829;
+    border: 2px solid #E3E829;
+    border-radius: 50%;
+}
 
+span {
+    color: #063598
+}
+
+.secondary {
+    color: #00AECB;
+}
