--- a/src/app/master/application/application-detail/application-detail.component.html
+++ b/src/app/master/application/application-detail/application-detail.component.html
@@ -35,9 +35,9 @@
                         mdTooltip="{{'app.master.application.addService' | translate}}">
                         <md-icon>add</md-icon>
                     </button>
-                    <app-service-list *ngIf="initialdata"
+                    <!--<app-service-list *ngIf="initialdata"
                         [services]="initialdata.services">
-                    </app-service-list>
+                    </app-service-list>-->
                 </md-card-content>
             </md-card>
         </form>
