--- a/src/app/user/user-list-result/user-list-result.component.html
+++ b/src/app/user/user-list-result/user-list-result.component.html
@@ -1,5 +1,4 @@
-
-<md-card class="app-card-content">
+<md-card class="app-card-content md_card_app">
     <md-card-title>{{'app.user.new'|translate}}</md-card-title>
     <md-divider></md-divider>
     <md-card-content>
