--- a/src/app/user/user-list-admin/user-list-admin.component.html
+++ b/src/app/user/user-list-admin/user-list-admin.component.html
@@ -1,4 +1,4 @@
-<md-card class="app-card-content">
+<md-card class="app-card-content md_card_app">
     <md-card-content>
         <md-list>
             <md-list-item *ngFor="let user of usersAdministratos">
