--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,7 +1,10 @@
-<md-toolbar>{{'app.user.title'|translate}}</md-toolbar>
+<md-toolbar class="toolbar_header">
+    <font color="white">{{'app.user.title'|translate}}</font>
+</md-toolbar>
 <button md-fab
     [routerLink]="['/user/admin/new']"
     class="fab"
+    color="primary"
     routerLinkActive="active">
     <md-icon class="md-24">add</md-icon>
 </button>
