--- a/src/app/master/service/service/service.component.html
+++ b/src/app/master/service/service/service.component.html
@@ -1,12 +1,12 @@
 <md-toolbar class="toolbar_header">
     <font color="white">{{'app.master.service.title' | translate}}</font>
 </md-toolbar>
-<button md-fab
+<!--<button md-fab
     [routerLink]="['/master/service/new']"
     class="fab"
     color="primary"
     routerLinkActive="active">
     <md-icon class="md-24">add</md-icon>
-</button>
+</button>-->
 <router-outlet name="details"></router-outlet>
 <router-outlet></router-outlet>
