--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,11 @@ md-icon.xml:hover{
   cursor: pointer;
 }
 
+md-icon.edit:hover{
+  color:green;
+  cursor: pointer;
+}
+
 span {
     color: #063598
 }
