--- a/src/app/master/service/service-detail/service-detail.component.html
+++ b/src/app/master/service/service-detail/service-detail.component.html
@@ -1,24 +1,85 @@
-<md-card  class="app-card-content md_card_app">
-    <md-card-title *ngIf="initialdata">{{'app.master.service.service' | translate}} {{initialdata.name}}</md-card-title>
-    <md-card-title *ngIf="!initialdata">{{'app.master.service.new' | translate}}</md-card-title>
-    <md-divider></md-divider>
+<md-card class="app-card-content md_card_app">
+    <md-card-title *ngIf="!initialdata">{{'app.master.application.new' | translate}}</md-card-title>
     <md-card-content>
         <form (ngSubmit)="onSubmit()"
             [formGroup]="form">
-            <md-input-container class="example-full-width">
-                <input mdInput
-                    type="text"
-                    placeholder="Nombre"
-                    formControlName="name"
-                    maxlength="50">
-            </md-input-container>
+            <section>
+
+                <md-input-container class="form_control_container">
+                    <input mdInput
+                        type="text"
+                        placeholder="{{'app.master.service.url' | translate}}"
+                        formControlName="invokeUrl"
+                        maxlength="500">
+                </md-input-container>
+                <md-input-container class="form_control_container">
+                    <input mdInput
+                        type="number"
+                        placeholder="{{'app.master.service.timeOut' | translate}}"
+                        formControlName="invokeTimeout"
+                        maxlength="10">
+                </md-input-container>
+            </section>
+            <section>
+                <md-input-container class="form_control_container">
+                    <input mdInput
+                        type="number"
+                        placeholder="{{'app.master.service.retryCount' | translate}}"
+                        formControlName="retryCount"
+                        maxlength="10">
+                </md-input-container>
+                <md-input-container class="form_control_container">
+                    <input mdInput
+                        type="number"
+                        placeholder="{{'app.master.service.retryDelay' | translate}}"
+                        formControlName="retryDelay"
+                        maxlength="50">
+                </md-input-container>
+            </section>
+            <section>
+                <md-input-container class="form_control_container"
+                    [style.display]="!form.get('verCode').value ?' none' : 'block' ">
+                    <input mdInput
+                        type="text"
+                        placeholder="{{'app.master.service.verCode' | translate}}"
+                        formControlName="verCode"
+                        maxlength="500"
+                        readonly>
+                </md-input-container>
+            </section>
+            <section>
+                <md-input-container class="form_control_container"
+                    [style.display]="emptyVerCode ? 'none' : 'block' ">
+                    <input mdInput
+                        type="text"
+                        placeholder="{{'app.master.service.verCodeUrl' | translate}}"
+                        formControlName="verCodeUrl"
+                        maxlength="500">
+                </md-input-container>
+                <md-input-container class="form_control_container"
+                    [style.display]="emptyVerCode ? 'none' : 'block' ">
+                    <input mdInput
+                        type="number"
+                        placeholder="{{'app.master.service.verCodeTimeOut' | translate}}"
+                        formControlName="verCodeTimeut"
+                        maxlength="50">
+                </md-input-container>
+            </section>
+
+            <section>
+                <md-checkbox formControlName="reqCallback">{{'app.master.service.reqCallBack' | translate}}</md-checkbox>
+                <md-input-container class="form_control_container"
+                    [style.display]="!form.get('reqCallback').value ? 'none' : 'block' ">
+                    <input mdInput
+                        type="text"
+                        placeholder="{{'app.master.service.callBackStatus' | translate}}"
+                        formControlName="callBackStatus"
+                        maxlength="500">
+                </md-input-container>
+            </section>
         </form>
     </md-card-content>
     <md-card-actions align="end">
-        <button md-raised-button
-            type="button"
-            (click)="doReset()"
-            [disabled]="!form.status">{{'app.common.reset' | translate}}</button>
         <button md-raised-button
             type="button"
             (click)="doCancel()">{{'app.common.cancel' | translate}}</button>
@@ -28,5 +89,4 @@
             (click)="onSubmit()"
             [disabled]="!form.valid">{{'app.common.save' | translate}}</button>
     </md-card-actions>
-    <div *ngIf="pleaseSave">Please save or cancel</div>
 </md-card>
