--- a/src/app/master/service/service-detail/service-detail.component.scss
+++ b/src/app/master/service/service-detail/service-detail.component.scss
@@ -1,12 +1,8 @@
-.card-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+.md_card_app {
+    margin: -20px;
 }
 
-md-card {
-    box-sizing: border-box;
-    margin: 12px;
+.form_control_container {
+    display: block;
+    margin-bottom: 25px;
 }
-
-
