--- a/src/app/master/service/service/service.component.html
+++ b/src/app/master/service/service/service.component.html
@@ -1,7 +1,7 @@
-<md-toolbar class="toolbar_header">
+<!--<md-toolbar class="toolbar_header">
     <font color="white">{{'app.master.service.title' | translate}}</font>
 </md-toolbar>
-<!--<button md-fab
+<button md-fab
     [routerLink]="['/master/service/new']"
     class="fab"
     color="primary"
