--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -1,4 +1,6 @@
-<md-progress-bar mode="indeterminate" *ngIf="isChargingInitialData"></md-progress-bar>
+<md-progress-bar mode="indeterminate"
+    color="accent"
+    *ngIf="isChargingInitialData"></md-progress-bar>
 <div class="card-container">
     <md-card class="search md_card_app"
         [style.display]="xmlTransactionSelected ? 'none' : 'block' ">
@@ -53,7 +55,7 @@
         <md-card-actions align="end">
             <button md-mini-fab
                 type="button"
-                (click)="search()"
+                (click)="onSearch()"
                 [disabled]="false"
                 color="primary"
                 mdTooltip="{{'app.common.search' | translate}}">
@@ -65,8 +67,11 @@
         [style.display]="xmlTransactionSelected ? 'none' : 'block' "
         *ngIf="showTransactions">
         <md-card-content>
-        <md-progress-bar mode="indeterminate" *ngIf="isSearching"></md-progress-bar>
-            <p-dataTable [value]="transactions" *ngIf="!isSearching">
+            <md-progress-bar mode="indeterminate"
+                color="accent"
+                *ngIf="isSearching"></md-progress-bar>
+            <p-dataTable [value]="transactions"
+                *ngIf="!isSearching">
                 <p-header>{{'app.retry.transactions' | translate}}</p-header>
                 <p-column field="id"
                     header="{{'app.retry.results.transaction' | translate}}"></p-column>
@@ -103,7 +108,9 @@
                     </p-dataTable>
                 </ng-template>
             </p-dataTable>
-            <p-paginator rows="10" *ngIf="!isSearching"
+            <p-paginator rows="10"
+                *ngIf="!resetPaginator"
+                [style.display]="isSearching ? 'none' : 'block' "
                 [totalRecords]="cantidad"
                 pageLinkSize="5"
                 (onPageChange)="paginate($event)"></p-paginator>
@@ -139,5 +146,3 @@
         </md-card-actions>
     </md-card>
 </div>
-
-
