add loading page and change style input to accent

--- a/src/app/master/service/service-list/service-list.component.html
+++ b/src/app/master/service/service-list/service-list.component.html
@@ -4,6 +4,7 @@
     <md-card-content>
         <md-select placeholder="{{'app.retry.applications' | translate}}"
             class="item"
+            color="accent"
             (change)="onSelectApplication()"
             [(ngModel)]="selectedApplication">
             <md-option *ngFor="let application of applications"
