--- a/src/app/report/report/report.component.html
+++ b/src/app/report/report/report.component.html
@@ -1,3 +1,6 @@
+<md-progress-bar mode="indeterminate"
+    color="accent"
+    *ngIf="isChargingInitialData"></md-progress-bar>
 <div class="card-container">
     <md-card class="actual"
         *ngIf="dashboard">
