--- a/src/app/master/service/service-detail/service-detail.component.html
+++ b/src/app/master/service/service-detail/service-detail.component.html
@@ -5,14 +5,14 @@
             [formGroup]="form">
             <section>
 
-                <md-input-container class="form_control_container">
+                <md-input-container class="form_control_container" color="accent">
                     <input mdInput
                         type="text"
                         placeholder="{{'app.master.service.url' | translate}}"
                         formControlName="invokeUrl"
                         maxlength="500">
                 </md-input-container>
-                <md-input-container class="form_control_container">
+                <md-input-container class="form_control_container" color="accent">
                     <input mdInput
                         type="number"
                         placeholder="{{'app.master.service.timeOut' | translate}}"
@@ -21,14 +21,14 @@
                 </md-input-container>
             </section>
             <section>
-                <md-input-container class="form_control_container">
+                <md-input-container class="form_control_container" color="accent">
                     <input mdInput
                         type="number"
                         placeholder="{{'app.master.service.retryCount' | translate}}"
                         formControlName="retryCount"
                         maxlength="10">
                 </md-input-container>
-                <md-input-container class="form_control_container">
+                <md-input-container class="form_control_container" color="accent">
                     <input mdInput
                         type="number"
                         placeholder="{{'app.master.service.retryDelay' | translate}}"
@@ -37,7 +37,7 @@
                 </md-input-container>
             </section>
             <section>
-                <md-input-container class="form_control_container"
+                <md-input-container class="form_control_container" color="accent"
                     [style.display]="!form.get('verCode').value ?' none' : 'block' ">
                     <input mdInput
                         type="text"
@@ -48,7 +48,7 @@
                 </md-input-container>
             </section>
             <section>
-                <md-input-container class="form_control_container"
+                <md-input-container class="form_control_container" color="accent"
                     [style.display]="emptyVerCode ? 'none' : 'block' ">
                     <input mdInput
                         type="text"
@@ -56,7 +56,7 @@
                         formControlName="verCodeUrl"
                         maxlength="500">
                 </md-input-container>
-                <md-input-container class="form_control_container"
+                <md-input-container class="form_control_container" color="accent"
                     [style.display]="emptyVerCode ? 'none' : 'block' ">
                     <input mdInput
                         type="number"
@@ -68,7 +68,7 @@
 
             <section>
                 <md-checkbox formControlName="reqCallback">{{'app.master.service.reqCallBack' | translate}}</md-checkbox>
-                <md-input-container class="form_control_container"
+                <md-input-container class="form_control_container" color="accent"
                     [style.display]="!form.get('reqCallback').value ? 'none' : 'block' ">
                     <input mdInput
                         type="text"
