--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -11,6 +11,7 @@
                 [formGroup]="form">
                 <md-select placeholder="{{'app.retry.applications' | translate}}"
                     class="item"
+                    color="accent"
                     (change)="onSelectApplication($event.value)"
                     [(ngModel)]="selectedApplication"
                     formControlName="application">
@@ -19,6 +20,7 @@
                 </md-select>
                 <md-select placeholder="{{'app.retry.services' | translate}}"
                     class="item"
+                    color="accent"
                     formControlName="serviceControl">
                     <md-option *ngFor="let service of services"
                         [value]="service.id">{{ service.name }}
@@ -26,25 +28,26 @@
                 </md-select>
                 <md-select placeholder="{{'app.retry.consumer' | translate}}"
                     class="item"
+                    color="accent"
                     formControlName="consumer">
                     <md-option *ngFor="let consumer of consumers"
                         [value]="consumer">{{ consumer }}
                     </md-option>
                 </md-select>
-                <md-input-container class="item">
+                <md-input-container class="item" color="accent">
                     <input mdInput
                         type="number"
                         placeholder="{{'app.retry.message' | translate}}"
                         formControlName="messageId"
                         maxlength="10">
                 </md-input-container>
-                <md-input-container class="item">
+                <md-input-container class="item" color="accent">
                     <input mdInput
                         type="date"
                         placeholder="{{'app.retry.initialDate' | translate}}"
                         formControlName="initialDate">
                 </md-input-container>
-                <md-input-container class="item">
+                <md-input-container class="item" color="accent">
                     <input mdInput
                         type="date"
                         placeholder="{{'app.retry.finalDate' | translate}}"
@@ -116,33 +119,6 @@
                 (onPageChange)="paginate($event)"></p-paginator>
         </md-card-content>
         <md-card-actions align="end">
-        </md-card-actions>
-    </md-card>
-</div>
-<div *ngIf="xmlTransactionSelected">
-    <md-card class="search md_card_app xml_container">
-
-        <md-divider></md-divider>
-        <md-card-content>
-            <div ace-editor
-                [(text)]="xmlTransactionSelected"
-                [mode]="'sql'"
-                [theme]="'clouds'"
-                [options]="options"
-                [readOnly]="true"
-                [autoUpdateContent]="true"
-                [durationBeforeCallback]="1000"
-                (textChanged)="onChange($event)"
-                style="min-height: 200px; width:100%; overflow: auto;"></div>
-        </md-card-content>
-        <md-card-actions align="end">
-            <button md-mini-fab
-                type="button"
-                (click)="backToGrid()"
-                color="primary"
-                mdTooltip="{{'app.retry.history.back' | translate}}">
-                <md-icon>grid_on</md-icon>
-            </button>
         </md-card-actions>
     </md-card>
 </div>
