--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -41,18 +41,43 @@
                         formControlName="messageId"
                         maxlength="10">
                 </md-input-container>
-                <md-input-container class="item" color="accent">
-                    <input mdInput
-                        type="date"
-                        placeholder="{{'app.retry.initialDate' | translate}}"
-                        formControlName="initialDate">
-                </md-input-container>
-                <md-input-container class="item" color="accent">
-                    <input mdInput
-                        type="date"
-                        placeholder="{{'app.retry.finalDate' | translate}}"
-                        formControlName="finalDate">
-                </md-input-container>
+               
+             
+             <md-input-container color="accent" class="item">
+                    <input mdInput 
+                           [mdDatepicker]="resultPickerInitial"
+                           formControlName="initialDate"
+                           [min]="minDate"
+                           [max]="maxDate"
+                           [mdDatepickerFilter]="filterOdd ? dateFilter : null"
+                           placeholder="{{'app.retry.initialDate' | translate}}">
+                   
+                  </md-input-container>
+                  <button [mdDatepickerToggle]="resultPickerInitial"></button>
+                  <md-datepicker
+                      #resultPickerInitial
+                      [touchUi]="touch"
+                      [startAt]="startAt"
+                      [startView]="yearView ? 'year' : 'month'">
+                  </md-datepicker>
+
+                  <md-input-container color="accent" class="item">
+                    <input mdInput 
+                           [mdDatepicker]="resultPicker"
+                           formControlName="finalDate"
+                           [min]="minDate"
+                           [max]="maxDate"
+                           [mdDatepickerFilter]="filterOdd ? dateFilter : null"
+                           placeholder="{{'app.retry.finalDate' | translate}}">
+                   
+                  </md-input-container>
+                  <button [mdDatepickerToggle]="resultPicker"></button>
+                  <md-datepicker
+                      #resultPicker
+                      [touchUi]="touch"
+                      [startAt]="startAt"
+                      [startView]="yearView ? 'year' : 'month'">
+                  </md-datepicker>
             </form>
         </md-card-content>
         <md-card-actions align="end">
@@ -122,3 +147,4 @@
         </md-card-actions>
     </md-card>
 </div>
+  
