--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ my-app:empty + .loading {
 }
 
 .responsive-container {
-  margin: 1em auto;
+  margin: -1em ;
   min-height: 1024px;       /* cap container min width */
   max-height: 1024px;       /* cap container max width */
   position: relative;
@@ -115,7 +115,7 @@ my-app:empty + .loading {
 .responsive-container img {
   position: absolute;
   top: -999px;            /* use sufficiently large number */
-  bottom: -500px;
+  bottom: -600px;
   left: -999px;
   right: -999px;
   margin: auto;           /* center horizontally and vertically */
